--- a/footer.html
+++ b/footer.html
@@ -40,12 +40,15 @@
         <link href="assets/css/style.css" rel="stylesheet">
         <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet">
         <style>
-            /* footer {
-              
-            } */
+            .divider-d {
+                border-top: 1px solid #EAEAEA;
+                margin-bottom: 15px;
+            }
+
             h2 {
                 margin-top: 15px;
             }
+
             p {
                 margin: 0 -15px 10px;
             }
@@ -60,7 +63,11 @@
                 <div class="container">
                 <div class="row">
                     <h3>PlaceStation</h3>
+                    <hr class="divider-d">
                     <div class="col-sm-6">
+                        <p>대표 김진수</p>
+                        <p>주소 부산광역시 부산진구 중앙대로 749, 범향빌딩 4층</p>
+                        <p>전화번호 051-912-1000</p>
                         <p>© 2024 PlaceStation, All Rights Reserved</p>
                     </div>
                 </div>
