프론트 수정

--- a/footer.html
+++ b/footer.html
@@ -40,35 +40,33 @@
         <link href="assets/css/style.css" rel="stylesheet">
         <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet">
         <style>
-            .divider-d {
+            #footer {
                 border-top: 1px solid #EAEAEA;
                 margin-bottom: 15px;
             }
 
-            h2 {
+            #h3-footer {
                 margin-top: 15px;
             }
 
-            p {
+            .p-footer {
                 margin: 0 -15px 10px;
             }
         </style>
       </head>
       <body data-spy="scroll" data-target=".onpage-navigation" data-offset="60">
             <main>
-
-            <hr class="divider-d">
             <!-- 하단 작은 푸터 시작 -->
             <footer class="footer bg-dark">
                 <div class="container">
                 <div class="row">
-                    <h3>PlaceStation</h3>
-                    <hr class="divider-d">
+                    <h3 id="h3-footer">PlaceStation</h3>
+                    <hr class="divider-d" id="footer">
                     <div class="col-sm-6">
-                        <p>대표 김진수</p>
-                        <p>주소 부산광역시 부산진구 중앙대로 749, 범향빌딩 4층</p>
-                        <p>전화번호 051-912-1000</p>
-                        <p>© 2024 PlaceStation, All Rights Reserved</p>
+                        <p class="p-footer">대표 김진수</p>
+                        <p class="p-footer">주소 부산광역시 부산진구 중앙대로 749, 범향빌딩 4층</p>
+                        <p class="p-footer">전화번호 051-912-1000</p>
+                        <p class="p-footer">© 2024 PlaceStation, All Rights Reserved</p>
                     </div>
                 </div>
                 </div>
